# FSR_homeworks

./: CMakeLists.txt  README.md  main.c  print_read_arr.c  quicksort.c  tamplates.c
informatics/ADT/: C.c  E.c  anj.c
informatics/BST/: C.c
informatics/HQ/: A.c  B.c  C.c  E.c
informatics/arrays/: A.c  B.c  C.c  D.c  E.c  G.c  H.c
informatics/autumn_graphs/: C.c  D.c  E.c
informatics/cycles/: B.c  C.c  D.c  E.c  F.c  G.c  H.c  I.c  J.c  bank_interest.c
informatics/exp/: fire.c
informatics/multydimensional/: A.c  B.c  C.c  D.c  E.c  F.c  G.c
informatics/pointers/: A.c  B.c  C.c  D.c
informatics/recusrion/: A.c  B.c  C.c  D.c  E.c  F.c  H.c
second_semester/informatics/DSU_MST/: A.c
semester1/informatics/2025-10-12-1_branching/: A.c  D.c  E.c  F.c
semester1/informatics/2025-10-12_2_cycles/: A.c
semester1/yandex/2025-09-04/: cutlets.c  red_cap.c
semester1/yandex/2025-09-04_comparison_operators/: 1.c  E.c
semester1/yandex/2025-09-11/: F.c
semester1/yandex/2025-09-11_recursion/: A.c  B.c  C.c  D.c  E.c
semester1/yandex/2025-09-18/: C.c
semester1/yandex/2025-09-18_vectors/: A.c  D.c  E.c  F.c
semester1/yandex/2025-09-25/: B.c
semester1/yandex/2025-09-25_recursion_n_memory/: C.c  D.c
semester1/yandex/2025-10-09_matrices/: B.c
semester1/yandex/2025-10-16/: A.c
yandex/: heap.c  stack.c  stack_list.c  tamplates.c
yandex/01_12_2025_graph/: A.c  B.c  C.c  D.c
yandex/04.09.2025/: 1.c  1copy.c  branching.c  cutlets.c  elevator.c  horse.c  red_cap.c  tennis.c  traffic_lights.c
yandex/04_09_2025/: 1copy.c  elevator.c
yandex/13_11_2025/: heap.c
yandex/16.10.2025/: C.c
yandex/16.10.25/: B.c
yandex/16_10_2025/: C.c
yandex/17_11_2025/: A.c
yandex/17_11_2025 (BST)/: A.c
yandex/18.09.2025/: B.c  C.c  D.c  E.c  F.c
yandex/18_09_2025/: B.c  E.c
yandex/19_10_2025/: C.c
yandex/23_10_2025/: B.c  vova.c  vova2.c
yandex/25.09.2025/: D.c  sort.c
yandex/30_10_2025/: deque.c  stack.c
(+62 files in other folders)
